tests/negative/test-fail-comp1.rooc
fun main() -> int {    
    true >= false;
    return 0;
}